--- a/src/main/resources/config/middletier-backup.service
+++ b/src/main/resources/config/middletier-backup.service
@@ -6,7 +6,7 @@ Description=JBR MiddleTier Backup Service
 After=mysql.service
 
 [Service]
-ExecStart=/usr/bin/java -Xms768M -Xmx768M -Dspring.config.location=file:/usr/bin/jbr/MiddleTier-Backup-PDN.properties -Dlogging.config=file:/usr/bin/jbr/MiddleTier-Backup-PDN-log4j.xml -jar /usr/bin/jbr/MiddleTier-Backup-onejar.jar
+ExecStart=/usr/bin/java -Xms768M -Xmx768M  -Dspring.profiles.active=dev -jar /usr/bin/jbr/MiddleTier-Backup-onejar.jar
 
 [Install]
 WantedBy=multi-user.target
