JBR-228 change backup to use liquibase, swagger etc

--- a/src/main/resources/config/application-pdn.yml
+++ b/src/main/resources/config/application-pdn.yml
@@ -28,6 +28,7 @@ server:
 
 backup:
   service-name: "Middle Tier Production"
+  web-log-url: http://localhost:12001/jbr/int/log/data
   directory:
     name: /media/Shared/Backups
     days: 30
