--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -25,6 +25,7 @@ spring:
 
 backup:
   service-name: "Middle Tier Debug"
+  web-log-url: http://localhost:10001/jbr/int/log/data
   directory:
     date-format: yyyy-MM-dd
 
