--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -26,7 +26,7 @@ server:
   port: 10013
 
 backup:
-  service-name: "Middle Tier Development"
+  service-name: middletier-backup-dev
   directory:
     name: /home/jason/Working/Backup
     days: 10
