JBR-20 implement automatic backups

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,9 @@ databaseChangeLog:
 
   - include:
       file: /db/changelog/db.changelog-002-hardware.yaml
+
+  - include:
+      file: /db/changelog/db.changelog-003-files.yaml
+
+  - include:
+      file: /db/changelog/db.changelog-999-dbgdata.yaml
