JBR-20 implement automatic backups

--- a/src/main/resources/config/application-dbg-dev.yml
+++ b/src/main/resources/config/application-dbg-dev.yml
@@ -22,6 +22,7 @@ backup:
     days: 5
     zip: /home/jason/Working/BackupDevZip
   schedule: 0 0/1 * ? * *
+  enabled: false
 
   db-url: ${db.dev.backup.server}?autoReconnect=true&useSSL=false
   db-username: ${db.dev.backup.user}
