--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,6 +24,12 @@ spring:
     contexts: default
 
 backup:
+  gather-schedule: 0 0 0 * * ?
+  gather-enabled: false
+  synchronize-schedule: 0 0 0 * * ?
+  synchronize-enabled: false
+  schedule: 0 20 0/1 * * ?
+  enabled: false
   service-name: middletier-backup-dbg
   web-log-url: http://localhost:10001/jbr/int/log/data
   directory:
