--- a/src/main/resources/db/changelog/db.changelog-999-dbgdata.yaml
+++ b/src/main/resources/db/changelog/db.changelog-999-dbgdata.yaml
@@ -14,3 +14,6 @@ databaseChangeLog:
               - column:
                   name: id
                   value: 1
+              - column:
+                  name: location
+                  value: 1
