--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,4 +13,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-004-classification-data.yaml
 
   - include:
+      file: /db/changelog/db.changelog-005-location-data.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
