JBR-20 implement automatic backups

--- a/src/main/resources/config/application-dbg-dev.yml
+++ b/src/main/resources/config/application-dbg-dev.yml
@@ -2,7 +2,7 @@ logging:
   level:
     ROOT: INFO
     com.jbr.middletier: DEBUG
-    org.hibernate.type.descriptor.sql: TRACE
+#    org.hibernate.type.descriptor.sql: TRACE
 
 spring:
   datasource:
@@ -14,7 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    show-sql: true
+#    show-sql: true
 
 backup:
   directory:
