--- a/src/main/resources/db/changelog/db.changelog-004-classification-data.yaml
+++ b/src/main/resources/db/changelog/db.changelog-004-classification-data.yaml
@@ -16,6 +16,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 1
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -29,6 +32,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 2
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -42,6 +48,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 3
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -55,6 +64,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 4
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -68,7 +80,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 5
-
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -82,6 +96,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 6
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -95,6 +112,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 7
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -108,6 +128,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 8
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -121,6 +144,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 9
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -134,6 +160,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 10
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -147,6 +176,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 11
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -160,6 +192,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 12
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -173,6 +208,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 13
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -186,6 +224,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 14
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -199,6 +240,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 15
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -212,6 +256,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 16
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -225,6 +272,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 17
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -238,6 +288,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 18
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -251,6 +304,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 19
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -264,6 +320,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 20
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -277,6 +336,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 21
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -290,6 +352,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 22
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -303,6 +368,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 23
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -316,6 +384,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 24
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -329,6 +400,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 25
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -342,6 +416,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 26
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -355,6 +432,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 27
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -368,6 +448,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 28
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -381,6 +464,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 29
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -394,6 +480,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 30
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -407,6 +496,9 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 31
+              - column:
+                  name: useMD5
+                  valueBoolean: false
 
         - insert:
             tableName: classification
@@ -420,3 +512,6 @@ databaseChangeLog:
               - column:
                   name: order
                   value: 32
+              - column:
+                  name: useMD5
+                  valueBoolean: false
