--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -22,4 +22,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-007-extentions.yaml
 
   - include:
+      file: /db/changelog/db.changelog-008-extentions-2.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
