--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -31,4 +31,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-010-ignore.yaml
 
   - include:
+      file: /db/changelog/db.changelog-011-import.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
