--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -34,4 +34,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-011-import.yaml
 
   - include:
+      file: /db/changelog/db.changelog-012-refactor.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
