--- a/src/main/resources/config/application-dbg.yml
+++ b/src/main/resources/config/application-dbg.yml
@@ -2,7 +2,7 @@ logging:
   level:
     ROOT: INFO
     com.jbr.middletier: DEBUG
-    org.hibernate.type.descriptor.sql: TRACE
+#    org.hibernate.type.descriptor.sql: TRACE
 
 spring:
   liquibase:
