JBR-20 Add testing and correct errors.

--- a/src/main/resources/config/application-dbg-pdn.yml
+++ b/src/main/resources/config/application-dbg-pdn.yml
@@ -24,6 +24,8 @@ backup:
     zip: /home/jason/Working/BackupDevZip
   schedule: 0 0/1 * ? * *
   enabled: false
+  email:
+    enabled: true
 
   db-url: ${db.dev.backup.server}?autoReconnect=true&useSSL=false
   db-username: ${db.dev.backup.user}
