--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,6 +33,13 @@ backup:
   directory:
     date-format: yyyy-MM-dd
   review-directory: /home/jason/Working/ImportReview
+  email:
+    host: smtp.ionos.co.uk
+    user: backups@jbrmmg.me.uk
+    password: ${email.pdn.backup.password}
+    from: backups@jbrmmg.me.uk
+    to: jason@jbrmmg.me.uk
+    enabled: false
 
 management:
   endpoint:
