--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -1,3 +1,15 @@
+logging:
+  level:
+    ROOT: INFO
+    com.jbr.middletier: DEBUG
+#    org.hibernate.type.descriptor.sql: TRACE
+
+spring:
+  liquibase:
+    default-schema:
+    change-log: classpath:/db/changelog/db.changelog-master.yaml
+    contexts: default
+
 backup:
   web-log-url:
   schedule: 0 0/1 * ? * *
