--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,6 +24,8 @@ spring:
     contexts: default
 
 backup:
+  db-backup-command: mysqldump -h ##server## -u ##user## -p##password## ##dbname## > ##todaydir##/##backupname##/##output##.sql
+  db-backup-max-time: 600
   gather-schedule: 0 0 0 * * ?
   gather-enabled: false
   schedule: 0 20 0/1 * * ?
