--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -23,4 +23,4 @@ backup:
     zip: ./target/testfiles/BackupDevZip
     date-format: yyyy-MM-dd
   zip-directory: ./target/testfiles/BackupDevZip
-  db-url: test:test:test
+  db-url: 20:test:20
