JBR-20 Add testing and correct errors.

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -16,7 +16,7 @@ backup:
   web-log-url: http://localhost:10001/jbr/int/log/data
   schedule: 0 0/1 * ? * *
   gather-schedule: 0 0 0 * * ?
-  gather-enabled: false
+  gather-enabled: true
   service-name: test-backup
   enabled: true
   directory:
